--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,7 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="background">#1f2123</color>
+    <color name="gray">#808080</color>
+    <color name="white">#fff</color>
+    <color name="orange">#FF9534</color>
 </resources>
