--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -93,6 +93,7 @@
         android:layout_alignParentBottom="true"
         android:layout_marginLeft="10dp"
         android:clickable="true"
-        android:layout_marginBottom="10dp"/>
+        android:layout_marginBottom="10dp"
+        android:onClick="signup"/>
 
 </RelativeLayout>
