--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -61,7 +61,8 @@
         android:id="@+id/loginbutton"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="40dp"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:onClick="login"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
