--- a/app/src/main/res/layout/activity_singnup.xml
+++ b/app/src/main/res/layout/activity_singnup.xml
@@ -1,9 +1,143 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".singnup">
+    tools:context=".singnup"
+    android:background="@color/background">
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/logindesign"
+        android:id="@+id/signupdesign"/>
+    <android.support.v7.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/background"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
+        app:titleTextColor="@color/white"
+        app:title="CREATE ACCOUNT"
+        app:titleMarginStart="30dp"
+        />
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:layout_below="@+id/signupdesign"
+        android:id="@+id/firstname"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:hint="Fisrt name"
+        android:layout_marginLeft="30dp"
+        android:textColorHint="@color/gray"
+        android:backgroundTint="@color/orange"
+        android:textColor="@color/white"
+        android:textSize="20dp"/>
+    <EditText
+        android:id="@+id/lastname"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_toRightOf="@+id/firstname"
+        android:backgroundTint="@color/orange"
+        android:layout_alignTop="@+id/firstname"
+        android:hint="Last name"
+        android:textColorHint="@color/gray"
+        android:textColor="@color/white"
+        android:textSize="20dp"/>
+    <EditText
+        android:layout_width="350dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/firstname"
+        android:layout_centerInParent="true"
+        android:backgroundTint="@color/orange"
+        android:hint="Email Address:example@mail.com"
+        android:textColorHint="@color/gray"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:id="@+id/email"
+        android:ems="20"
+        android:inputType="textEmailAddress"
+        android:layout_marginTop="20dp"
+        />
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="+91"
+        android:textColor="@color/white"
+        android:backgroundTint="@color/orange"
+        android:textSize="20dp"
+        android:layout_alignLeft="@id/email"
+        android:id="@+id/spin"
+        android:layout_below="@id/email"
+        android:layout_marginTop="20dp"
+
+        />
+
+
+    <EditText
+        android:id="@+id/phonenumber"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="phone"
+        android:backgroundTint="@color/orange"
+        android:hint="Phone number"
+        android:textColorHint="@color/gray"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:layout_below="@id/email"
+        android:layout_toRightOf="@+id/spin"
+        android:layout_marginTop="20dp"
+        />
+    <EditText
+        android:id="@+id/password"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="15"
+        android:backgroundTint="@color/orange"
+        android:hint="Create password"
+        android:textColorHint="@color/gray"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:layout_below="@id/spin"
+        android:layout_alignLeft="@id/email"
+        android:inputType="textPassword"
+        android:layout_marginTop="20dp"/>
+    <EditText
+        android:id="@+id/repassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:ems="15"
+        android:backgroundTint="@color/orange"
+        android:hint="Re-enter password"
+        android:textColorHint="@color/gray"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:layout_below="@id/password"
+        android:layout_alignLeft="@id/email"
+        android:inputType="textPassword"
+        android:layout_marginTop="20dp"/>
+
+    <Button
+        android:id="@+id/createaccount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/repassword"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"
+        android:background="@color/orange"
+        android:text="Create Account"
+        android:textColor="@color/white" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Need help?"
+        android:textColor="@color/white"
+        android:textSize="20dp"
+        android:layout_below="@id/createaccount"
+        android:layout_centerInParent="true"
+        android:layout_marginTop="20dp"/>
+
+
+</RelativeLayout>
