--- a/app/src/main/res/layout/activity_homepage.xml
+++ b/app/src/main/res/layout/activity_homepage.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".homepage">
+    tools:context=".homepage"
+    android:background="@color/background">
+    <Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:id="@+id/hometool"
+        android:backgroundTint="#000"
+        >
+    <ImageView
+        android:id="@+id/hometitle"
+        android:layout_width="120dp"
+        android:layout_height="wrap_content"
+        android:src="@drawable/traveloidsmall"
+        />
+    </Toolbar>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
