--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -5,13 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".homepage"
+    android:background="@color/background"
     >
     <Toolbar
         android:layout_width="match_parent"
         android:layout_height="75dp"
         android:id="@+id/hometool"
 
-        android:background="@color/background"
+        android:background="#000"
         >
     <ImageView
         android:id="@+id/hometitle"
@@ -20,26 +21,33 @@
         android:src="@drawable/traveloidsmall"
         />
     </Toolbar>
-    <android.support.design.widget.TabLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="75dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:background="@color/background"
-        app:tabIndicatorColor="@color/orange"
-        app:tabIndicatorGravity="top">
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </android.support.design.widget.TabLayout>
+        android:background="#000"
+        />
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/home"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="10dp"
+        android:id="@+id/home"
+        android:clickable="true"/>
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:src="@drawable/hotel"
+        android:layout_toRightOf="@id/home"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="50dp"
+        android:clickable="true"
+        />
+
+
 
 
 </RelativeLayout>
