--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -46,7 +46,8 @@
         android:layout_marginLeft="50dp"
         android:layout_marginBottom="10dp"
         android:id="@+id/home"
-        android:clickable="true"/>
+        android:clickable="true"
+        android:padding="5dp"/>
     <ImageView
         android:layout_width="40dp"
         android:layout_height="40dp"
@@ -57,6 +58,7 @@
         android:layout_marginLeft="50dp"
         android:clickable="true"
         android:id="@+id/hotel"
+        android:padding="5dp"
         />
     <ImageView
         android:layout_width="40dp"
@@ -68,6 +70,7 @@
         android:layout_marginLeft="50dp"
         android:clickable="true"
         android:id="@+id/travel"
+        android:padding="5dp"
         />
     <ImageView
         android:layout_width="40dp"
@@ -78,6 +81,7 @@
         android:layout_marginBottom="10dp"
         android:layout_marginLeft="50dp"
         android:id="@+id/user"
+        android:padding="5dp"
         />
 
 
