--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -83,6 +83,9 @@
         android:id="@+id/user"
         android:padding="5dp"
         />
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
 
