--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -55,6 +55,7 @@
 
     </android.support.design.widget.TabLayout>
     <android.support.v4.view.ViewPager
+        android:id="@+id/vp"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_above="@+id/tl"
