--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -25,12 +25,14 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/search"
-            android:layout_marginLeft="180dp"/>
+            android:layout_marginLeft="180dp"
+            android:padding="5dp"/>
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:src="@drawable/setting"
-            android:layout_marginLeft="20dp"/>
+            android:layout_marginLeft="20dp"
+            android:padding="5dp"/>
     </Toolbar>
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
