--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -20,6 +20,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:src="@drawable/traveloidsmall"
+        android:padding="5dp"
         />
         <ImageView
             android:layout_width="40dp"
@@ -33,7 +34,7 @@
             android:src="@drawable/setting"
             android:padding="5dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginRight="10dp"/>
     </Toolbar>
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
