--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/splash"/>
+        android:background="@drawable/effect"/>
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
