--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -27,7 +27,8 @@
             android:layout_height="40dp"
             android:src="@drawable/search"
             android:layout_marginLeft="180dp"
-            android:padding="5dp"/>
+            android:padding="5dp"
+            android:clickable="true"/>
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
