--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -28,7 +28,8 @@
             android:src="@drawable/search"
             android:layout_marginLeft="180dp"
             android:padding="5dp"
-            android:clickable="true"/>
+            android:clickable="true"
+            android:onClick="search"/>
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
