--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -13,6 +13,8 @@
         android:id="@+id/hometool"
 
         android:background="#000"
+        android:layout_marginRight="0dp"
+        android:layout_marginLeft="0dp"
 
         >
     <ImageView
