--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -7,38 +7,47 @@
     tools:context=".homepage"
     android:background="@color/background"
     >
+
     <Toolbar
+        android:id="@+id/hometool"
         android:layout_width="match_parent"
         android:layout_height="75dp"
-        android:id="@+id/hometool"
 
-        android:background="#000"
-        android:layout_marginRight="0dp"
         android:layout_marginLeft="0dp"
+        android:layout_marginRight="0dp"
+        android:background="#000"
 
         >
-    <ImageView
-        android:id="@+id/hometitle"
-        android:layout_width="120dp"
-        android:layout_height="wrap_content"
-        android:src="@drawable/traveloidsmall"
-        android:padding="5dp"
-        />
+
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/search"
-            android:layout_marginLeft="180dp"
+            android:id="@+id/hometitle"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:layout_marginBottom="10dp"
             android:padding="5dp"
-            android:clickable="true"
-            android:onClick="search"/>
+            android:src="@drawable/traveloidsmall" />
+
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginRight="0dp"
+            android:layout_marginTop="22dp"
+            android:layout_marginLeft="190dp"
+            android:clickable="true"
+            android:onClick="search"
+            android:padding="5dp"
+            android:src="@drawable/search" />
+        <ImageView
+            android:layout_width="37dp"
+            android:layout_height="37dp"
             android:src="@drawable/setting"
             android:padding="5dp"
+            android:clickable="true"
+            android:layout_marginTop="22dp"
             android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"/>
+
+            />
+
     </Toolbar>
     <android.support.design.widget.TabLayout
         android:layout_width="match_parent"
