--- a/app/src/main/res/layout-v21/activity_homepage.xml
+++ b/app/src/main/res/layout-v21/activity_homepage.xml
@@ -45,6 +45,7 @@
             android:clickable="true"
             android:layout_marginTop="22dp"
             android:layout_marginLeft="10dp"
+            android:onClick="settings"
 
             />
 
