--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -36,8 +36,7 @@
         android:textSize="30dp"
         android:textColor="@color/white"
         android:layout_below="@+id/userimage"
-        android:layout_centerHorizontal="true"
-        />
+        android:layout_centerHorizontal="true" />
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -45,14 +44,26 @@
         android:layout_below="@+id/UserName"
         android:paddingLeft="30dp"
         android:layout_marginTop="50dp">
-
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Travel History"
-            android:textSize="20sp"
-            android:paddingTop="10dp"/>
+            android:layout_height="wrap_content">
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/history"
+                android:layout_gravity="center"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="Travel History"
+                android:textSize="20sp"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:layout_gravity="center"/>
+        </LinearLayout>
+
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
