--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -119,6 +119,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:clickable="true"/>
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
 
 
