--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -37,54 +37,112 @@
         android:textColor="@color/white"
         android:layout_below="@+id/userimage"
         android:layout_centerHorizontal="true" />
+
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:layout_below="@+id/UserName"
-        android:paddingLeft="30dp"
-        android:layout_marginTop="50dp">
+        android:layout_marginTop="60dp"
+        android:orientation="vertical"
+        android:paddingLeft="30dp">
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <ImageView
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:layout_gravity="center"
                 android:src="@drawable/history"
-                android:layout_gravity="center"/>
+                android:paddingTop="8dp"/>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:layout_gravity="top"
+                android:gravity="top"
+                android:paddingLeft="10dp"
+                android:paddingTop="10dp"
                 android:text="Travel History"
-                android:textSize="20sp"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingTop="10dp">
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:paddingTop="8dp"
+                android:layout_gravity="center"
+                android:src="@drawable/notificationbell"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:paddingTop="10dp"
                 android:paddingLeft="10dp"
+                android:text="Notification"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:gravity="top"/>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/briefcase"
+                android:paddingTop="8dp"
                 android:layout_gravity="center"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:text="Booking and Trips"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:paddingLeft="10dp"
+                android:gravity="top"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:src="@drawable/bookmarks"
+                android:layout_gravity="center"
+                android:paddingTop="8dp"/>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:text="Booking and Trips"
+                android:textColor="@color/white"
+                android:textSize="25sp"
+                android:paddingLeft="10dp"/>
+
+
+
         </LinearLayout>
 
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Notification"
-            android:textSize="20sp"
-            android:paddingTop="10dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Booking and Trips"
-            android:textSize="20sp"
-            android:paddingTop="10dp"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:text="Bookmarks"
-            android:textSize="20sp"
-            android:paddingTop="10dp"/>
+
+
+
+
+
     </LinearLayout>
 
 
