--- a/app/src/main/res/layout/fragment_hotel.xml
+++ b/app/src/main/res/layout/fragment_hotel.xml
@@ -11,7 +11,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="250dp"
-        android:background="@drawable/grad"/>
+        android:background="@drawable/gradient"/>
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -119,9 +119,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
         android:clickable="true"/>
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+
+
+
 
 
 
