--- a/app/src/main/res/layout/fragment_user.xml
+++ b/app/src/main/res/layout/fragment_user.xml
@@ -1,14 +1,206 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".user">
+    tools:context=".user"
+    android:background="@color/background">
 
     <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="250dp"
+        android:background="@drawable/gradient"
+        android:id="@+id/back"
+        />
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:id="@+id/socialprofile"
+        android:text="Social Profile"
+        android:textColor="#000"
+        android:textSize="30dp"
+        android:gravity="center"
+        android:background="@color/orange"
+        />
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/socialprofile"
+        android:layout_marginTop="0dp"
+        android:id="@+id/main"
+        android:paddingTop="20dp"
+        >
 
-</FrameLayout>
+
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="140dp"
+        android:id="@+id/userrelative"
+        >
+
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/profile_image"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:src="@drawable/userimage"
+        app:civ_border_width="2dp"
+        app:civ_border_color="#FF000000"
+        android:layout_marginLeft="10dp"
+        />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Username"
+        android:layout_below="@id/profile_image"
+        android:textSize="20dp"
+        android:textColor="#000"
+        android:gravity="center"
+        android:layout_alignLeft="@id/profile_image"
+        android:paddingLeft="5dp"
+        />
+
+</RelativeLayout>
+
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/userrelative"
+            android:paddingTop="30dp"
+            android:layout_marginLeft="30dp"
+            android:id="@+id/likesreltive"
+            >
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2"
+                android:textSize="20dp"
+                android:textColor="#000"
+                android:gravity="center"
+                android:paddingLeft="5dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/likes"
+
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Place Visited"
+                android:layout_centerHorizontal="true"
+                android:textSize="15dp"
+                android:layout_below="@id/likes"
+                android:textColor="#000"
+                android:gravity="center"
+                android:paddingLeft="10dp"/>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/likesreltive"
+            android:paddingTop="30dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:id="@+id/placevisitrelative"
+
+            >
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="120"
+                android:textSize="20dp"
+                android:textColor="#000"
+                android:gravity="center"
+                android:paddingLeft="5dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/placesvisit"
+
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Likes"
+                android:layout_centerHorizontal="true"
+                android:textSize="15dp"
+                android:layout_below="@id/placesvisit"
+                android:textColor="#000"
+                android:gravity="center"
+                android:paddingLeft="10dp"/>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@id/placevisitrelative"
+            android:paddingTop="30dp"
+            android:id="@+id/reviewrelative"
+            >
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="7"
+                android:textSize="20dp"
+                android:textColor="#000"
+                android:gravity="center"
+                android:paddingLeft="5dp"
+                android:layout_centerHorizontal="true"
+                android:id="@+id/reviews"
+
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Reviews"
+                android:layout_centerHorizontal="true"
+                android:textSize="15dp"
+                android:layout_below="@id/reviews"
+                android:textColor="#000"
+                android:gravity="center"
+                android:paddingLeft="10dp"/>
+
+        </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/placevisitrelative"
+            android:paddingTop="10dp"
+            android:layout_centerHorizontal="true"
+            android:paddingLeft="120dp"
+            >
+            <Button
+                android:layout_width="250dp"
+                android:layout_height="35dp"
+                android:text="Edit Profile"
+                android:gravity="center"
+                android:background="@color/background"
+                android:textColor="@color/orange"/>
+
+
+        </RelativeLayout>
+
+
+
+
+    </RelativeLayout>
+    <GridView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/back"
+        android:numColumns="3"
+        >
+
+    </GridView>
+
+
+
+
+
+
+
+</RelativeLayout>
