--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="gray">#808080</color>
     <color name="white">#fff</color>
     <color name="orange">#FF9534</color>
+    <color name="black">#000</color>
 </resources>
